@@ -122,6 +122,7 @@ for my $k (keys %has) {
     no strict 'refs';
     *{"_build__${k}"} = sub {
         my ($self) = @_;
+
         my $obj = $self->_new_class(
             $name,
             $self->$method_class,
@@ -135,7 +136,26 @@ for my $k (keys %has) {
                  : ()),
                 (($k ~~ [ qw< storage > ] and defined $self->brain)
                  ? (
-                     hailo => $self,
+                     hailo => do {
+                         require Scalar::Util;
+                         Scalar::Util::weaken(my $s = $self);
+
+                         my %callback = (
+                             has_custom_order           => sub { $s->_custom_order },
+                             has_custom_tokenizer_class => sub { $s->_custom_tokenizer_class },
+                             set_order => sub {
+                                 my ($db_order) = @_;
+                                 $s->order($db_order);
+                                 $s->_engine->order($db_order);
+                             },
+                             set_tokenizer_class => sub {
+                                 my ($db_tokenizer_class) = @_;
+                                 $s->tokenizer_class($db_tokenizer_class);
+                             },
+                         );
+
+                         \%callback;
+                     },
                      brain => $self->brain
                  )
                  : ()),
