@@ -140,7 +140,7 @@ sub _engage_initialized_check_and_set_order {
 
     my $my_order = $self->order;
     if ($my_order != $db_order) {
-        if ($self->hailo->_custom_order) {
+        if ($self->hailo->{has_custom_order}->()) {
             die <<"DIE";
 You've manually supplied an order of `$my_order' to Hailo but you're
 loading a brain that has the order `$db_order'.
@@ -156,8 +156,7 @@ DIE
         }
 
         $self->order($db_order);
-        $self->hailo->order($db_order);
-        $self->hailo->_engine->order($db_order);
+        $self->hailo->{set_order}->($db_order);
     }
 
     return;
@@ -174,7 +173,7 @@ sub _engage_initialized_check_and_set_tokenizer {
     # defined() because we can't count on old brains having this
     if (defined $db_tokenizer_class
         and $my_tokenizer_class ne $db_tokenizer_class) {
-        if ($self->hailo->_custom_tokenizer_class) {
+        if ($self->hailo->{has_custom_tokenizer_class}->()) {
             die <<"DIE";
 You've manually supplied a tokenizer class `$my_tokenizer_class' to
 Hailo, but you're loading a brain that has the tokenizer class
@@ -192,7 +191,7 @@ DIE
         }
 
         $self->tokenizer_class($db_tokenizer_class);
-        $self->hailo->tokenizer_class($db_tokenizer_class);
+        $self->hailo->{set_tokenizer_class}->($db_tokenizer_class);
     }
 
     return;
